adicionando link ao projeto

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Glaucio S. Portfólio">
     <meta property="og:title" content="Glaucio Souza | Desenvolvedor Web" />
-    <meta property="og:description" content="Portfólio de Glaucio Souza - Desenvolvedor Web especializado em PHP, Laravel e Design Patterns." />
-    <meta property="og:image" itemprop="image" content="https://glaucioso.github.io/portifolioGlaucio/assets/images/about.png">
+    <meta property="og:description"
+        content="Portfólio de Glaucio Souza - Desenvolvedor Web especializado em PHP, Laravel e Design Patterns." />
+    <meta property="og:image" itemprop="image"
+        content="https://glaucioso.github.io/portifolioGlaucio/assets/images/about.png">
     <meta property="og:url" content="https://glaucioso.github.io/portifolioGlaucio/" />
     <meta property="og:type" content="website" />
     <link rel="icon" href="/portifolioGlaucio/assets/images/about.png">
@@ -376,19 +378,21 @@
                 <div class="project-box">
 
                     <div class="project-content">
-                        <div class="content">
-                            <div class="year">
-                                <i class='bx bxs-calendar'></i> 2025
-                            </div>
-                            <h3>Desenvolvimento do Portfólio</h3>
-                            <p>
-                                Desenvolvimento do meu portfólio pessoal para apresentar habilidades e projetos.
+                        <a href="https://github.com/Glaucioso/portifolioGlaucio" target="_blank">
+                            <div class="content">
+                                <div class="year">
+                                    <i class='bx bxs-calendar'></i> 2025
+                                </div>
+                                <h3>Desenvolvimento do Portfólio</h3>
+                                <p>
+                                    Desenvolvimento do meu portfólio pessoal para apresentar habilidades e projetos.
 
-                            </p>
-                            <p>
-                                <span>Tecnologias utilizadas:</span> HTML, CSS, JS, GIT.
-                            </p>
-                        </div>
+                                </p>
+                                <p>
+                                    <span>Tecnologias utilizadas:</span> HTML, CSS, JS, GIT.
+                                </p>
+                            </div>
+                        </a>
                     </div>
 
                 </div>
