consertando text contato

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 <div class="contact-box">
                     <a target="_blank" href="https://www.linkedin.com/in/glaucio-souza-64536766/">
                         <div class="contact-content">
-                            <h3><i class='bx bxl-linkedin'></i> <span>Likedin</span></h3>
+                            <h3><i class='bx bxl-linkedin'></i> <span>Linkedin</span></h3>
                         </div>
                     </a>
                 </div>
